# UdpVisualization

./: CMakeLists.txt  main.cpp  resources.qrc
backend/: BackendManager.cpp  BackendManager.h  Logger.cpp  Logger.h  SocketCanHandler.cpp  SocketCanHandler.h  UdpHandler.cpp  UdpHandler.h  XmlParser.cpp  XmlParser.h
backend/models/: ShapeModel.cpp  ShapeModel.h  UdpSocketModel.cpp  UdpSocketModel.h
qml/: main.qml
qml/components/: CanBusPanel.qml  ConnectionPanel.qml  ShapeViewer.qml  StatusIndicator.qml  UdpListView.qml
qml/components/shapes/: Circle.qml  Image.qml  Line.qml  Rectangle.qml  Text.qml
qml/dialogs/: ErrorDialog.qml
resources/: sample.xml
